Fixed expandable menu. Problem: Angular Foundation requires custom "has-dropdown" HTML attribute. Near as I can tell there's no way to provide custom attributes conditionally with Angular (like there is for, say, a class), so to work around it I wrapped each li in a div (nonstandard HTML but renders OK in modern browsers). This has slightly increased the height of the topbar, which I need to look into.

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -105,10 +105,13 @@ header {
     // !important needed to override inline styling created by Angular Foundation
   }
   
-  ul li {
-    background-color: transparent;
+  ul > div, ul li {
     text-align: center;
+    @media #{$small-only} {
+      background-color: $topbar-bg-color;
+    }
     @media #{$medium-up} {
+      background-color: transparent;
       display: inline-block;
       line-height: 72px;
     } // medium-up
@@ -135,11 +138,6 @@ header {
     font-weight: inherit;
     text-transform: inherit;
     line-height: inherit;
-    @media #{$small-only} {
-      &:not(:hover) {
-	background-color: $topbar-bg-color;
-      }
-    }
   }
   
   li:not(.has-form) a:not(.button).highlight {
